--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -50,6 +50,7 @@ jobs:
       with:
         context: .
         target: production
+        platforms: linux/amd64,linux/arm64
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
