--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prebuild": "npm run clean",
     "prestart": "npm run build",
     "docker:build": "./docker-scripts.sh build",
+    "docker:build:multiarch": "./docker-scripts.sh build-multiarch",
     "docker:start": "./docker-scripts.sh start",
     "docker:stop": "./docker-scripts.sh stop",
     "docker:restart": "./docker-scripts.sh restart",
